# libtorch_load

./: CMakeLists.txt  README.md  readImages.h  sample.cpp
